Added testCamera file for testing camera indexies. add git ignore. Revorked segment indexies becouse of new position of cameras

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,7 @@
 /TESTOVANIE
 /triangulated_darts.json
 /triangulated_results.json
+DartsApp/__pycache__/DartDetection.cpython-311.pyc
+DartsApp/__pycache__/triangulation.cpython-311.pyc
+DartsApp/__pycache__/DartDetection.cpython-311.pyc
+DartsApp/__pycache__/triangulation.cpython-311.pyc
